--- a/css/fonts.css
+++ b/css/fonts.css
@@ -39,3 +39,20 @@
     font-weight: 700;
     src: url('../fonts/pt-sans-v17-cyrillic_latin-700.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
   }
+
+  /* familjen-grotesk-regular - latin */
+  @font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Familjen Grotesk';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../fonts/familjen-grotesk-v8-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  }
+  /* familjen-grotesk-500 - latin */
+  @font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Familjen Grotesk';
+    font-style: normal;
+    font-weight: 500;
+    src: url('../fonts/familjen-grotesk-v8-latin-500.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  }
