--- a/scss/style.scss
+++ b/scss/style.scss
@@ -626,3 +626,111 @@
     text-decoration: none;
 }
 
+// ===FOOTER===
+
+.footer{
+    background-color: #0B7572;
+    width: 100%;
+    margin-top: 166px;
+}
+
+.footer__container{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding-top:80px ;
+    padding-bottom: 80px;
+}
+
+.footer__container .logo a{
+    font-family: Familjen Grotesk;
+    font-size: 60px;
+    font-weight: 500;
+    line-height: 90px;
+    letter-spacing: 0.16em;
+    text-align: left;
+    color: #FFFFFF;
+    text-decoration: none;
+}
+
+.footer__container .first--footer .footer--ul li{
+    list-style: none;
+}
+
+.footer__container .first--footer .footer--ul li a{
+    text-decoration: none;
+    color: #FFFFFF;
+    font-family: 'Exo 2';
+    font-size: 13px;
+    font-weight: 500;
+    line-height: 19.5px;
+    letter-spacing: 0.16em;
+    text-align: left;
+}
+
+.footer__container .third--footer{
+    display: flex;
+    align-items: center;
+}
+
+.footer__container .third--footer .footer--links{
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    margin-bottom:33px;
+}
+
+.footer__container .third--footer .footer--links li {
+    list-style: none;
+}
+
+.footer__container .third--footer li{
+    list-style: none;
+}
+
+.footer__container .third--footer li .footer--addres{
+    text-decoration: none;
+    font-family: 'Exo 2';
+    font-size: 13px;
+    font-weight: 600;
+    line-height: 19.5px;
+    text-align: left;
+    color: white;
+}
+
+.footer__container .third--footer li .footer--button {
+    margin-top: 33px;
+    display: flex;
+    align-items:center;
+    gap:15px ;
+    border: 1px solid #FF9619;
+    background-color: #FF9619;
+    padding: 8px 12px;
+    font-family: 'Exo 2';
+    font-size: 13px;
+    font-weight: 600;
+    line-height: 19.5px;
+    text-align: left;
+    color: white;
+    transition: all 0.5s;
+}
+
+.footer__container .third--footer li .footer--button:hover{
+    // border: none;
+    background-color: #bb7014;
+}
+
+.footer .about--figma a{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Exo 2';
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 18px;
+    letter-spacing: 0.16em;
+    text-decoration: none;
+    color: #FFFFFF;
+    padding-bottom: 29px;
+    margin-bottom: 40px;
+}
